fix: form styles

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <section class="cta section">
           <div class="container">
             <form
-              class="cta-form"
+              class="formspree"
               action="https://formspree.io/f/xpzkdevb"
               method="POST"
             >
