enhancement: og seo metadata

--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Taloobot provides an integrated natural-language-interfaced software to level up your HR operations." />
+    <meta property="og:url" content="/" key="ogurl" />
+    <meta
+      property="og:image"
+      content="/favicon.ico"
+      key="ogimage"
+    />
+    <meta
+      property="og:site_name"
+      content="Taloobot"
+      key="ogsitename"
+    />
+    <meta property="og:title" content="Taloobot: AI-powered Human Capital Management" key="ogtitle" />
+    <meta
+      property="og:description"
+      content="Taloobot provides an integrated natural-language-interfaced software to level up your HR operations."
+      key="ogdescription"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Taloobot</title>
