--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </p>
                 <div class="hero-cta">
                   <a class="button button-primary" href="#">Request a pilot</a
-                  ><a class="button" href="#">Get in touch</a>
+                  ><a class="button" href="#get-in-touch">Get in touch</a>
                 </div>
               </div>
               <div class="hero-figure anime-element">
@@ -254,7 +254,7 @@
           </div>
         </section>
 
-        <section class="cta section">
+        <section class="cta section" id="get-in-touch">
           <div class="container">
             <form
               class="formspree"
