fix: remove get in touch button

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                   software to level up your HR operations.
                 </p>
                 <div class="hero-cta">
-                  <a class="button button-primary" href="#">Request a pilot</a
-                  ><a class="button" href="#get-in-touch">Get in touch</a>
+                  <a class="button button-primary" href="#get-in-touch">Request a pilot</a
+                  >
                 </div>
               </div>
               <div class="hero-figure anime-element">
