fix: remove get in touch button

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="pricing-table-cta mb-8">
                       <a
                         class="button button-primary button-shadow button-block"
-                        href="#"
+                        href="#get-in-touch"
                         >Request a pilot</a
                       >
                     </div>
